# no_std_components

./: .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.yaml
scripts/: new.sh  subgit.sh
scripts/barely-fuzzy/: Cargo.toml
