[package]
name = "barely-fuzzy"
version = "0.1.0"
authors = ["QuackHack-McBlindy"]
license = "MIT"
description = "bare metal no_std components"
repository = "https://github.com/QuackHack-McBlindy/barely-fuzzy"
readme = "README.md"
keywords = ["esp-hal", "embedded", "esp32"]
categories = ["embedded"]
edition = "2024"

[dependencies]

